adding primary type

--- a/modularity_dataframe.ipynb
+++ b/modularity_dataframe.ipynb
@@ -138,7 +138,138 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>primary_type</th>\n",
+       "      <th>additional_type(s)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>720575940596125868</td>\n",
+       "      <td>T5c</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>720575940597856265</td>\n",
+       "      <td>Tm16</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>720575940597944841</td>\n",
+       "      <td>Tm7</td>\n",
+       "      <td>CB3851</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>720575940598267657</td>\n",
+       "      <td>TmY15</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>720575940599333574</td>\n",
+       "      <td>Tm1</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>137682</th>\n",
+       "      <td>720575940661335681</td>\n",
+       "      <td>CB0180</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>137683</th>\n",
+       "      <td>720575940661336193</td>\n",
+       "      <td>TmY3</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>137684</th>\n",
+       "      <td>720575940661337217</td>\n",
+       "      <td>KCab-p</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>137685</th>\n",
+       "      <td>720575940661338497</td>\n",
+       "      <td>CB0904</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>137686</th>\n",
+       "      <td>720575940661339777</td>\n",
+       "      <td>R1-6</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>137687 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                        id primary_type additional_type(s)\n",
+       "0       720575940596125868          T5c                NaN\n",
+       "1       720575940597856265         Tm16                NaN\n",
+       "2       720575940597944841          Tm7             CB3851\n",
+       "3       720575940598267657        TmY15                NaN\n",
+       "4       720575940599333574          Tm1                NaN\n",
+       "...                    ...          ...                ...\n",
+       "137682  720575940661335681       CB0180                NaN\n",
+       "137683  720575940661336193         TmY3                NaN\n",
+       "137684  720575940661337217       KCab-p                NaN\n",
+       "137685  720575940661338497       CB0904                NaN\n",
+       "137686  720575940661339777         R1-6                NaN\n",
+       "\n",
+       "[137687 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "types = pd.read_csv(\"/Users/rweberla/Downloads/consolidated_cell_types.csv\")\n",
+    "types.rename(columns={\"root_id\": \"id\"}, inplace=True)\n",
+    "types"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -206,10 +337,135 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>0.0</th>\n",
+       "      <th>primary_type</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>720575940600433181</td>\n",
+       "      <td>1</td>\n",
+       "      <td>JO-B</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>720575940600646173</td>\n",
+       "      <td>1</td>\n",
+       "      <td>JO-mz</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>720575940602120928</td>\n",
+       "      <td>2</td>\n",
+       "      <td>CB1783</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>720575940602132509</td>\n",
+       "      <td>1</td>\n",
+       "      <td>JO-EVM</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>720575940602309600</td>\n",
+       "      <td>1</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21937</th>\n",
+       "      <td>720575940661321857</td>\n",
+       "      <td>1</td>\n",
+       "      <td>PLP160</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21938</th>\n",
+       "      <td>720575940661325697</td>\n",
+       "      <td>12</td>\n",
+       "      <td>MTe07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21939</th>\n",
+       "      <td>720575940661329281</td>\n",
+       "      <td>6</td>\n",
+       "      <td>CB2488</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21940</th>\n",
+       "      <td>720575940661335681</td>\n",
+       "      <td>3</td>\n",
+       "      <td>CB0180</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21941</th>\n",
+       "      <td>720575940661338497</td>\n",
+       "      <td>5</td>\n",
+       "      <td>CB0904</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>21942 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                       id  0.0 primary_type\n",
+       "0      720575940600433181    1         JO-B\n",
+       "1      720575940600646173    1        JO-mz\n",
+       "2      720575940602120928    2       CB1783\n",
+       "3      720575940602132509    1       JO-EVM\n",
+       "4      720575940602309600    1          NaN\n",
+       "...                   ...  ...          ...\n",
+       "21937  720575940661321857    1       PLP160\n",
+       "21938  720575940661325697   12        MTe07\n",
+       "21939  720575940661329281    6       CB2488\n",
+       "21940  720575940661335681    3       CB0180\n",
+       "21941  720575940661338497    5       CB0904\n",
+       "\n",
+       "[21942 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# merge on id but keeping all the neurons in the modularity list (left join)\n",
+    "merged_auditory = pd.merge(mod, types, on=\"id\", how=\"left\")\n",
+    "merged_auditory = merged_auditory.drop(columns=['additional_type(s)'])\n",
+    "merged_auditory"
+   ]
   }
  ],
  "metadata": {
@@ -228,7 +484,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
