--- a/modularity_dataframe.ipynb
+++ b/modularity_dataframe.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -125,20 +125,20 @@
        "[21942 rows x 2 columns]"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "mod = pd.read_csv(\"clustering_result.txt\", sep=\" \", header=None)\n",
+    "mod = pd.read_csv(\"data/clustering_result.txt\", sep=\" \", header=None)\n",
     "mod.rename(columns={0: \"id\", 1: \"0.0\"}, inplace=True)\n",
     "mod"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -256,20 +256,20 @@
        "[137687 rows x 3 columns]"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "types = pd.read_csv(\"/Users/rweberla/Downloads/consolidated_cell_types.csv\")\n",
+    "types = pd.read_csv(\"/Users/ggutierr/Documents/FlyWireData/consolidated_cell_types.csv\")\n",
     "types.rename(columns={\"root_id\": \"id\"}, inplace=True)\n",
     "types"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -325,7 +325,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -337,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -455,7 +455,7 @@
        "[21942 rows x 3 columns]"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -469,12 +469,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "# save merged auditory\n",
-    "merged_auditory.to_csv(\"data/auditory_types.txt\", index=False)"
+    "merged_auditory.to_csv(\"data/mod_auditory_neurons.txt\", index=False)"
    ]
   },
   {
@@ -487,7 +487,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "fbl",
+   "display_name": "modularity",
    "language": "python",
    "name": "python3"
   },
@@ -501,7 +501,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
