--- a/auditory_connectivity_table.ipynb
+++ b/auditory_connectivity_table.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +194,7 @@
        "[692009 rows x 6 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2102,6 +2102,205 @@
    ],
    "source": [
     "auditory_neurons[auditory_neurons[\"additional_type(s)\"] == \"AVLP_pr05\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>Flywire 2024 ID</th>\n",
+       "      <th>Neuropils</th>\n",
+       "      <th>preference</th>\n",
+       "      <th># imaged females</th>\n",
+       "      <th># responding females</th>\n",
+       "      <th>prop females with auditory responses</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>720575940619783518</td>\n",
+       "      <td>AVLP_pr01</td>\n",
+       "      <td>sine</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>720575940620062633</td>\n",
+       "      <td>AVLP_pr01</td>\n",
+       "      <td>sine</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>720575940602914988</td>\n",
+       "      <td>AVLP_pr01</td>\n",
+       "      <td>sine</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>720575940620195719</td>\n",
+       "      <td>AVLP_pr01</td>\n",
+       "      <td>sine</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>720575940634508174</td>\n",
+       "      <td>AVLP_pr01</td>\n",
+       "      <td>sine</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>398</th>\n",
+       "      <td>398</td>\n",
+       "      <td>720575940655398817</td>\n",
+       "      <td>GNG_pr01</td>\n",
+       "      <td>sine</td>\n",
+       "      <td>17</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0.235294</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>399</th>\n",
+       "      <td>399</td>\n",
+       "      <td>720575940630203589</td>\n",
+       "      <td>GNG_pr01</td>\n",
+       "      <td>sine</td>\n",
+       "      <td>17</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0.235294</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>400</th>\n",
+       "      <td>400</td>\n",
+       "      <td>720575940617641077</td>\n",
+       "      <td>GNG_pr01</td>\n",
+       "      <td>sine</td>\n",
+       "      <td>17</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0.235294</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>401</th>\n",
+       "      <td>401</td>\n",
+       "      <td>720575940612801022</td>\n",
+       "      <td>GNG_pr01</td>\n",
+       "      <td>sine</td>\n",
+       "      <td>17</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0.235294</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>402</th>\n",
+       "      <td>402</td>\n",
+       "      <td>720575940630571068</td>\n",
+       "      <td>GNG_pr01</td>\n",
+       "      <td>sine</td>\n",
+       "      <td>17</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0.235294</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>403 rows × 7 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Unnamed: 0     Flywire 2024 ID  Neuropils preference  # imaged females  \\\n",
+       "0             0  720575940619783518  AVLP_pr01       sine                 4   \n",
+       "1             1  720575940620062633  AVLP_pr01       sine                 4   \n",
+       "2             2  720575940602914988  AVLP_pr01       sine                 4   \n",
+       "3             3  720575940620195719  AVLP_pr01       sine                 4   \n",
+       "4             4  720575940634508174  AVLP_pr01       sine                 4   \n",
+       "..          ...                 ...        ...        ...               ...   \n",
+       "398         398  720575940655398817   GNG_pr01       sine                17   \n",
+       "399         399  720575940630203589   GNG_pr01       sine                17   \n",
+       "400         400  720575940617641077   GNG_pr01       sine                17   \n",
+       "401         401  720575940612801022   GNG_pr01       sine                17   \n",
+       "402         402  720575940630571068   GNG_pr01       sine                17   \n",
+       "\n",
+       "     # responding females  prop females with auditory responses  \n",
+       "0                       4                              1.000000  \n",
+       "1                       4                              1.000000  \n",
+       "2                       4                              1.000000  \n",
+       "3                       4                              1.000000  \n",
+       "4                       4                              1.000000  \n",
+       "..                    ...                                   ...  \n",
+       "398                     4                              0.235294  \n",
+       "399                     4                              0.235294  \n",
+       "400                     4                              0.235294  \n",
+       "401                     4                              0.235294  \n",
+       "402                     4                              0.235294  \n",
+       "\n",
+       "[403 rows x 7 columns]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Some auditory neurons with selectivity labels\n",
+    "train_dat = pd.read_csv(\"data/train_dat.csv\")\n",
+    "train_dat"
    ]
   },
   {
